# torrensearch-web

./: .dockerignore  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: docker-web.yml
src/torrensearch_web/: __init__.py  web.py
src/torrensearch_web/templates/: index.html
