[project]
name = "torrensearch-web"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-caching>=2.3.1",
    "flask-limiter>=4.1.1",
    "torrensearch>=1.0.0",
]

[project.scripts]
torrensearch-web = "torrensearch_web.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torrensearch_web"]
