[project]
name = "torrensearch-web"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "slowapi>=0.1.9",
    "jinja2>=3.1.0",
    "torrensearch>=1.0.0",
    "fastapi-cache2>=0.2.0",
]

[project.scripts]
torrensearch-web = "torrensearch_web.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/torrensearch_web"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle error
    "F",    # pyflake
    "I",    # isort imports
    "SIM",  # Simplify code
    "C4",   # Better list/set/dict comprehensions
    "ERA",  # Removes commented-out code from Python files.
    "FAST", # FAST API related
    "A",    # Check for python builtins being used as variables or parameters.
    "DTZ",  #  Ban the usage of unsafe naive datetime class
    "T10",  # Check for pdb;idbp imports and set traces
    "SLF",  # Private members accessed
    "RET",  # Checks return values
]

[dependency-groups]
dev = ["ruff>=0.15.10"]
